Update to Java 21 and restore getFirst/getLast methods
Co-authored-by: commjoen <1457214+commjoen@users.noreply.github.com>