@@ -96,12 +96,11 @@ public class Challenges {
   }
 
   public boolean isFirstChallenge(ChallengeDefinition challengeDefinition) {
-    return challengeDefinition.equals(definitions.challenges().get(0));
+    return challengeDefinition.equals(definitions.challenges().getFirst());
   }
 
   public boolean isLastChallenge(ChallengeDefinition challengeDefinition) {
-    var challenges = definitions.challenges();
-    return challengeDefinition.equals(challenges.get(challenges.size() - 1));
+    return challengeDefinition.equals(definitions.challenges().getLast());
   }
 
   public List<ChallengeDefinition> getChallengeDefinitions() {
